@@ -1,5 +1,5 @@
 % Generated by roxygen2: do not edit by hand
-% Please edit documentation in R/RcppExports.R, R/stopwatch.R
+% Please edit documentation in R/RcppExports.R
 \name{log_setup}
 \alias{log_setup}
 \alias{log_filesetup}
@@ -12,11 +12,6 @@
 \alias{log_warn}
 \alias{log_error}
 \alias{log_critical}
-\alias{get_stopwatch}
-\alias{elapsed_stopwatch}
-\alias{format_stopwatch}
-\alias{print.stopwatch}
-\alias{format.stopwatch}
 \title{R Accessor Functions for spdlog Logger}
 \usage{
 log_setup(name = "default", level = "warn")
@@ -40,16 +35,6 @@ log_warn(s)
 log_error(s)
 
 log_critical(s)
-
-get_stopwatch()
-
-elapsed_stopwatch(sw)
-
-format_stopwatch(sw)
-
-\method{print}{stopwatch}(x, ...)
-
-\method{format}{stopwatch}(x, ...)
 }
 \arguments{
 \item{name}{A character variable with the logging instance name, default value is \sQuote{default}.}
@@ -60,12 +45,6 @@ format_stopwatch(sw)
 instantiated.}
 
 \item{s}{A character variable with the logging pattern, level or message.}
-
-\item{sw}{An S3 object of type \code{stopwatch}.}
-
-\item{x}{An S3 object of type \code{stopwatch}.}
-
-\item{...}{Dotted argument required by generic, unused here.}
 }
 \value{
 Nothing is returned from these functions as they are invoked for their side-effects.
@@ -89,11 +68,7 @@ Several functions are provided:
    \item{\code{log_warn}}{Logs a warn-level message.}
    \item{\code{log_error}}{Logs a error-level message.}
    \item{\code{log_critical}}{Logs a critical-level message.}
-   \item{\code{get_stopwatch}}{Returns a stopwatch object (as an S3 object).}
-   \item{\code{elapsed_stopwatch}}{Returns elapsed time for stopwatch in seconds.}
-   \item{\code{format_stopwatch}}{Returns elapsed time for stopwatch as character variable.}
 }
-The \code{stopwatch} object has \code{print} and \code{format} methods.
 
 Supported logging levels are, in order of increasing threshold values, \sQuote{trace},
 \sQuote{debug}, \sQuote{warn}, \sQuote{info}, \sQuote{warn}, \sQuote{error}, and
