@@ -30,11 +30,7 @@ const std::string default_log_pattern = "%^[%Y-%m-%d %H:%M:%S.%e] [%n] [Process:
 //'    \item{\code{log_warn}}{Logs a warn-level message.}
 //'    \item{\code{log_error}}{Logs a error-level message.}
 //'    \item{\code{log_critical}}{Logs a critical-level message.}
-//'    \item{\code{get_stopwatch}}{Returns a stopwatch object (as an S3 object).}
-//'    \item{\code{elapsed_stopwatch}}{Returns elapsed time for stopwatch in seconds.}
-//'    \item{\code{format_stopwatch}}{Returns elapsed time for stopwatch as character variable.}
 //' }
-//' The \code{stopwatch} object has \code{print} and \code{format} methods.
 //'
 //' Supported logging levels are, in order of increasing threshold values, \sQuote{trace},
 //' \sQuote{debug}, \sQuote{warn}, \sQuote{info}, \sQuote{warn}, \sQuote{error}, and
@@ -46,9 +42,6 @@ const std::string default_log_pattern = "%^[%Y-%m-%d %H:%M:%S.%e] [%n] [Process:
 //' @param s A character variable with the logging pattern, level or message.
 //' @param filename A character variable with the logging filename if a file-based logger is
 //' instantiated.
-//' @param sw An S3 object of type \code{stopwatch}.
-//' @param x An S3 object of type \code{stopwatch}.
-//' @param ... Dotted argument required by generic, unused here.
 //'
 //' @return Nothing is returned from these functions as they are invoked for their side-effects.
 //'
@@ -170,7 +163,34 @@ template <typename T> Rcpp::XPtr<T> make_xptr(T* p) {
     return Rcpp::XPtr<T>(p);
 }
 
-//' @rdname log_setup
+//' R Accessor Functions for spdlog Stopwatch
+//'
+//' A set of functions provides access to the \code{spdlog} stopwatch facilty. As \code{stopwatch}
+//' object is a simple container around a C++ \code{std::chrono} object which (essentially) reports
+//' elapsed-time since creation. The object is exported to R via an external pointer permitting use
+//' from both R and C++.
+//'
+//' Several functions are provided:
+//' \describe{
+//'    \item{\code{get_stopwatch}}{Returns a stopwatch object (as an S3 object).}
+//'    \item{\code{elapsed_stopwatch}}{Returns elapsed time for stopwatch in seconds.}
+//'    \item{\code{format_stopwatch}}{Returns elapsed time for stopwatch as character variable.}
+//' }
+//' The \code{stopwatch} object has \code{print} and \code{format} methods.
+//'
+//' @param sw An S3 object of type \code{stopwatch}.
+//' @param x An S3 object of type \code{stopwatch}.
+//' @param ... Dotted argument required by generic, unused here.
+//'
+//' @return The desired object is returned: respectively, a stopwatch object as an external pointer
+//' in an S3 class, the elapsed time in seconds as a double, or formatted as a character variable.
+//'
+//' @examples
+//' w <- get_stopwatch()
+//' Sys.sleep(0.2)
+//' elapsed_stopwatch(w)
+//' format_stopwatch(w)
+//' @rdname get_stopwatch
 // [[Rcpp::export]]
 Rcpp::XPtr<spdlog::stopwatch> get_stopwatch() {
     auto sw = make_xptr(new spdlog::stopwatch());
@@ -178,13 +198,13 @@ Rcpp::XPtr<spdlog::stopwatch> get_stopwatch() {
     return sw;
 }
 
-//' @rdname log_setup
+//' @rdname get_stopwatch
 // [[Rcpp::export]]
 double elapsed_stopwatch(Rcpp::XPtr<spdlog::stopwatch> sw) {
     return sw->elapsed().count();
 }
 
-//' @rdname log_setup
+//' @rdname get_stopwatch
 // [[Rcpp::export]]
 std::string format_stopwatch(Rcpp::XPtr<spdlog::stopwatch> sw) {
     return std::to_string(elapsed_stopwatch(sw));
