@@ -1,3 +1,11 @@
+2022-12-23  Dirk Eddelbuettel  <edd@debian.org>
+
+	* src/interface.cpp: Split stopwatch documentation off
+	* man/get_stopwatch.Rd: Idem
+	* man/log_setup.Rd: Idem
+	* src/RcppExports.cpp: Idem
+	* R/RcppExports.R: Idem
+
 2022-12-22  Dirk Eddelbuettel  <edd@debian.org>
 
 	* DESCRIPTION (Version, Date): Roll micro release version
